--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Lightning Seasonal Garden & Haiku Collector</title>
+<title>Lightning Garden & Haiku Collector</title>
 <style>
 body { font-family: monospace; background: #f0fff0; text-align: center; margin: 2em; }
 button { padding: 10px 20px; font-size: 16px; margin: 5px; cursor: pointer; }
@@ -22,7 +22,7 @@ button { padding: 10px 20px; font-size: 16px; margin: 5px; cursor: pointer; }
 </head>
 <body>
 
-<h1>🌱 Lightning Seasonal Garden & Haiku Collector 🌱</h1>
+<h1>🌱 Lightning Garden & Haiku Collector 🌱</h1>
 
 <button id="plantBtn">Plant a Seed (1 sat via Alby)</button>
 <button class="export-btn" id="exportBtn">Export Garden as PNG</button>
